improve plugin dependency validation